# mne-lsl

./: .flake8  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  INSTALLER.cmd  INSTALLER.sh  LICENSE  MANIFEST.in  README.md  README.txt  TODO.txt  extras_requirements.txt  index.html  pycnbi_config.py  pyproject.toml  requirements.py  requirements.txt  requirements_ci_doc.txt  requirements_ci_externals.txt  requirements_ci_externals_pytest.txt  requirements_ci_pytest.txt  requirements_externals.txt  requirements_extras.txt  setup.py  startup.py
1.0.0/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
1.1.0/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
1.1.1/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
1.10.0/: objects.inv  sg_execution_times.html
1.10.1/: genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
1.11.0/: genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
1.12.0/: index.html  search.html  searchindex.js  sg_execution_times.html
1.13.0/: index.html  objects.inv  sg_execution_times.html
1.13.1/: genindex.html  objects.inv  search.html  searchindex.js
1.2.0/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
1.3.0/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
1.3.1/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
1.4.0/: .buildinfo  genindex.html  index.html  objects.inv  searchindex.js  sg_execution_times.html
1.5.0/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
1.6.0/: genindex.html  index.html  search.html  searchindex.js  sg_execution_times.html
1.6.1/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
1.7.0/: genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
1.7.1/: genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
1.8.0/: genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
1.9.0/: genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
Analysis/: tfr_export.py
Decoder/: decoder.py  rlda.py  trainer.py
Glass/: GLASS_MI_START.cmd  GLASS_MI_STOP.cmd  adb-glass-commands.txt  bgi_client.py
Layout/: ANT_64.xyz  antneuro_64ch.lay
OpenVibe/: recorder.xml
Protocols/: bar_decision.py  bar_decision_human.py  bar_decision_human_nocue.py  feedback.py  test_mi.py  test_mi_cascade.py  test_mi_human.py  test_mi_human_nocue.py  train_mi.py  train_mi_gait.py  train_mi_human.py  viz_bars.py  viz_human.py
Shimmer/: analogplot.py  cnbi_shimmer.py  cnbi_shimmer_org.py  cnbi_shimmer_show1.py  cnbi_shimmer_show2.py  convertIMU.py  numpy_ringbuffer.py  run_shimmer_SCREEN.cmd  run_shimmer_SCREEN1.cmd  shimmerpy.py
StreamPlayer/: StreamPlayer.py  stream_player.py
StreamReceiver/: stream_receiver.py
StreamRecorder/: run_stream_recorder - ANY.cmd  run_stream_recorder - openvibeSignal.cmd  stream_recorder.py
StreamViewer/: .scope_settings.ini  mainwindow.ui.BIP  mainwindow.ui.ORG  run_stream_viewer - ANY.cmd  stream_viewer.py
Triggers/: pyLptControl.py  triggerdef_16.py  triggerdef_16_16.py  triggerdef_256.py  triggerdef_cnbi.py  triggerdef_errp.py  triggerdef_gait.py  triggerdef_gait_chuv.py  triggerdef_grasp.py  triggerdef_phoneme.py  triggerdef_rx1.py  triggerdef_template.py
Utils/: add_events_LSL_timestamps.py  convert2fif.py  eeg2fif.py  epochs2mat.py  epochs2psd.py  epochs2txt.py  fif2mat.py  hdf5_to_python.py  list_trigger_pins.py  mat2fif.py  merge_events.py  parse_online_results.py  pycnbi_logger.py  pycnbi_utils.py  q_common.py  raw2psd.py  viz_bars.py  viz_human.py
bsl/: __init__.py  _version.py  conftest.py  logger.py  player.py  stream.py  typing.py
dev/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
doc/: api.rst  api_reference.rst  arduino2lpt.rst  arduino_lpt.rst  command_line.rst  conf.py  datasets.rst  glossary.rst  index.rst  install.rst  links.inc  make.bat  references.bib  utils.rst
docs/: index.html
examples/: 00_cardiac_peak_detection.py  00_peak_detection.py  00_player_separate_process.py  10_peak_detection.py  10_player_separate_process.py  20_bandpower.py  30_real_time_evoked_responses.py  40_decode.py  README.rst  eeg_resting_state.py  eeg_resting_state_recording.py  real-time_filtered_buffer.py  real-time_regulation_of_alpha_waves.py  resting_state_recording.py  simulate_an_lsl_stream_with_a_stream_player.py
libLSL/: cnbi_lsl.py  lsl_cpp.h  pylsl.py
mne_lsl/: __init__.py  __init__.pyi  _typing.py  _typing.pyi  conftest.py
neurodecode/: __init__.py  _version.py  colorer.py  logger.py  pycnbi_config.py
paper/: paper.bib  paper.md
pycnbi/: __init__.py  colorer.py  pycnbi_config.py  startup.py
sample/: mi_left_right_events.txt
scripts/: nd_add_lsl_events.cmd  nd_convert2fif.cmd  nd_feature_stats.cmd  nd_fif2mat.cmd  nd_fif_info.cmd  nd_fif_resample.cmd  nd_gui.cmd  nd_offline_mi.cmd  nd_online_mi.cmd  nd_stream_player.cmd  nd_stream_recorder - openvibe.cmd  nd_stream_recorder.cmd  nd_stream_recorder.py  nd_stream_viewer - openvibe.cmd  nd_stream_viewer.cmd  nd_tfr_export.cmd  nd_tfr_export_all_signals.cmd  nd_trainer.cmd  pycnbi_add_lsl_events.cmd  pycnbi_convert2fif.cmd  pycnbi_feature_importances.cmd  pycnbi_feature_stats.cmd  pycnbi_fif2mat.cmd  pycnbi_fif_info.cmd  pycnbi_gui.cmd  pycnbi_offline_mi.cmd  pycnbi_online_mi.cmd  pycnbi_stream_player.cmd  pycnbi_stream_recorder - openvibe.cmd  pycnbi_stream_recorder.cmd  pycnbi_stream_viewer - openvibe.cmd  pycnbi_stream_viewer.cmd  pycnbi_test_mi.cmd  pycnbi_tfr_export.cmd  pycnbi_train_mi.cmd  (+5 more)
(+1586 files in other folders)
