[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
authors = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
classifiers = [
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: BSD License',
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.9',
  'Topic :: Scientific/Engineering',
  'Topic :: Software Development',
]
dependencies = [
  'click>=8.1',
  'distro; sys_platform == "linux"',
  'mne>=1.4.2',
  'numpy>=1.21,<3',
  'packaging',
  'pooch',
  'psutil',
  'pyqtgraph',
  'qtpy',
  'requests',
  'scipy',
]
description = 'Real-time framework integrated with MNE-Python for online neuroscience research through LSL-compatible devices.'
keywords = [
  'brain',
  'EEG',
  'eeg',
  'electroencephalography',
  'labstreaminglayer',
  'LSL',
  'neuroimaging',
  'neuroscience',
  'python',
  'real-time',
]
license = {file = 'LICENSE'}
maintainers = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
name = 'mne_lsl'
readme = 'README.md'
requires-python = '>=3.9'
version = '1.5.0.dev0'

[project.optional-dependencies]
all = [
  'mne_lsl[build]',
  'mne_lsl[doc]',
  'mne_lsl[stubs]',
  'mne_lsl[style]',
  'mne_lsl[test]',
]
build = ['build', 'twine']
doc = [
  'furo',
  'intersphinx_registry',
  'matplotlib',
  'memory-profiler',
  'numpydoc',
  'pyqt5',
  'scikit-learn',
  'sphinx!=7.2.*',
  'sphinx-copybutton',
  'sphinx-design',
  'sphinx-gallery',
  'sphinx-issues',
  'sphinxcontrib-bibtex',
]
full = ['mne_lsl[all]']
stubs = ['isort', 'mypy', 'ruff>=0.1.8']
style = [
  'bibclean',
  'codespell[toml]>=2.2.4',
  'isort',
  'pydocstyle[toml]',
  'ruff>=0.1.8',
  'toml-sort',
  'yamllint',
]
test = ['pyqt5', 'pytest-cov', 'pytest-randomly', 'pytest-timeout', 'pytest>=8.0']

[project.scripts]
mne-lsl = 'mne_lsl.commands.main:run'
mne_lsl_player = 'mne_lsl.commands.mne_lsl_player:run'
mne_lsl_stream_viewer = 'mne_lsl.commands.mne_lsl_stream_viewer:run'

[project.urls]
documentation = 'https://mne.tools/mne-lsl'
homepage = 'https://mne.tools/mne-lsl'
source = 'https://github.com/mne-tools/mne-lsl'
tracker = 'https://github.com/mne-tools/mne-lsl/issues'

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words = '.codespellignore'
skip = 'build,.git,.mypy_cache,.pytest_cache,doc/_static/logos/*'

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
omit = ['**/mne_lsl/stream_viewer/*']
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/mne_lsl/_typing.py',
  '**/mne_lsl/_version.py',
  '**/mne_lsl/conftest.py',
  '**/mne_lsl/utils/_fixes.py',
  '**/mne_lsl/utils/_tests.py',
  '**/tests/**',
]

[tool.isort]
extend_skip_glob = [
  '.github/*',
  'doc/*',
  'examples/*',
  'pyproject.toml',
  'setup.py',
  'tutorials/*',
]
line_length = 88
multi_line_output = 3
profile = 'black'
py_version = 39

[tool.pydocstyle]
add_ignore = 'D100,D104,D107'
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_|_typing).*\.py'
match-dir = '^mne_lsl.*'

[tool.pytest.ini_options]
addopts = ['--color=yes', '--cov-report=', '--durations=20', '--junit-xml=junit-results.xml', '--strict-config', '--tb=short', '-ra', '-v']
junit_family = 'xunit2'
minversion = '8.0'

[tool.ruff]
extend-exclude = [
  '.github/*',
  'doc/*',
  'pyproject.toml',
  'setup.py',
]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = []
select = ['A', 'B', 'E', 'F', 'G', 'LOG', 'NPY', 'PIE', 'PT', 'T20', 'UP', 'W']

[tool.ruff.lint.per-file-ignores]
'*' = [
  'B904', # 'Within an except clause, raise exceptions with raise ... from ...'
  'UP007', # 'Use `X | Y` for type annotations', requires python 3.10
]
'*.pyi' = ['E501', 'F811']
'__init__.py' = ['F401']
'examples/*' = ['B018', 'E402', 'F811', 'T201']
'tutorials/*' = ['B018', 'E402', 'F811', 'T201']

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
'mne_lsl.datasets' = ['*registry.txt']
'mne_lsl.stream_viewer.control_gui.settings' = ['*.ini']

[tool.setuptools.packages.find]
exclude = ['mne_lsl*tests']
include = ['mne_lsl*']

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true

[tool.uv.pip]
only-binary = ['matplotlib', 'numpy', 'scipy']
